# gnn_devtools

./: .buildinfo  README.md  examples.html  genindex.html  gnn_devtools.html  index.html  install.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py
.github/workflows/: static.yml
_modules/: index.html
_modules/gnn_devtools/: graphs.html  matrices.html
_sources/: gnn_devtools.rst.txt
docs/: build.sh
docs/source/: conf.py  examples.rst  index.rst
src/gnn_devtools/: __init__.py  graphs.py  matrices.py  utils.py
