[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gnn_devtools"
version = "0.1.0"
authors = [
  { name="Xander Wilcke", email="w.x.wilcke@vu.nl" },
]
description = "Toolkit to generate random graph data to facilitate the development of graph neural networks with"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GLP3",
    "Operating System :: OS Independent",
]
dependencies = [
  "numpy"
  ]
keywords = ["gnn", "graph neural network", "graphs", "knowledge graphs"]

[project.urls]
"Homepage" = "https://gitlab.com/wxwilcke/gnn_devtools"
"Bug Tracker" = "https://gitlab.com/wxwilcke/gnn_devtools/-/issues"
